added mapstruct and asunc api
