# track-service/src/main/java/com/epam/java/specialization/trackservice/controller/InternalTrackController.java
@@ -1,6 +1,7 @@
 package com.epam.java.specialization.trackservice.controller;
 
 import com.epam.java.specialization.trackservice.internal.api.InternalTracksApi;
+import com.epam.java.specialization.trackservice.internal.api.dto.InternalTrackInfoDto;
 import com.epam.java.specialization.trackservice.internal.api.dto.PublishTrackRequestDto;
 import com.epam.java.specialization.trackservice.service.TrackService;
 import lombok.RequiredArgsConstructor;
@@ -12,6 +13,11 @@ import org.springframework.web.bind.annotation.RestController;
 public class InternalTrackController implements InternalTracksApi {
 
     private final TrackService trackService;
+
+    @Override
+    public ResponseEntity<InternalTrackInfoDto> getTrackInfo(Long trackId) {
+        return ResponseEntity.ok(trackService.getInfo(trackId));
+    }
 
     @Override
     public ResponseEntity<Void> publishTrack(Long trackId, PublishTrackRequestDto request) {
